--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
   - "8"
-scripts:
+script:
   - "npm run test-ci"
 after_script: "npm install coveralls && cat ./coverage/lcov.info | coveralls"
